codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui/src/chatwidget/tests/review_mode.rs
expression: exec_blob
---
• ⚙️ Ran command
  └ sleep 1
  └ (no output)
